CSS corrections to stretch each row to the same size.

--- a/tracker/static/css/tracker.css
+++ b/tracker/static/css/tracker.css
@@ -43,12 +43,7 @@ th.rotate > div {
     border-color: black;
 }
 
-.card.p{
-    margin-bottom: 0;
-}
-
 .card-title {
-    background-color: #dedede;
     alignment: center;
 }
 
@@ -64,7 +59,7 @@ th.rotate > div {
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-    align-items: flex-start;
+    align-items: stretch;
     border: 10px;
 }
 
